--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -1,85 +1,89 @@
 ---
-title: "Gravity: Keep Your Bundle Sizes under Control"
+title: "Introducing Gravity: An Easier Way to Keep Build Artifact Sizes Under Control"
 authorHandle: oscard0m_
-tags: [ci, bundlesize, performance]
+tags: [gravity, ci, bundlesize, performance]
 bio: "Oscar Dominguez, Software Engineer"
-description: "TODO"
+description: "Gravity monitors build artifact sizes to prevent accidental increases – right in your CI pipeline."
 og:
   image: /assets/images/posts/2025-03-19-gravity/og-image.png
 image: "/assets/images/posts/2025-03-19-gravity/man-falling-darker-gray-logo.webp"
-imageAlt: "Gravity monitors build artifact sizes to prevent accidental increases – right in your CI pipeline."
+imageAlt: "Gravity logo and backgound."
 ---
 
-Tired of unexpected bloated builds slowing down your app? Meet [Gravity](https://gravity.ci) by [Mainmatter](https://mainmatter.com), your new CI/CD tool for keeping bundle sizes in check, effortlessly.
+Build artifact sizes might not be the first thing you think about during code reviews, but keeping them in check can make a big difference. A minor update can easily lead to an unexpected size increase, and if it goes unnoticed, it could cause issues down the line.
+
+At [Mainmatter](https://mainmatter.com), we've seen firsthand how even small changes can lead to surprising performance regressions. That's why we built [Gravity](https://gravity.ci), a tool that helps developers manage build artifact sizes directly within their CI/CD pipeline. Today, we're excited to share it with the world.
 
 ## What is Gravity?
 
-_Gravity_ automatically tracks build size changes in your pull request. If your bundle gets bigger, _Gravity_ flags it for approval. Otherwise, you can merge with confidence.
+Gravity is a tool that helps developers manage build artifact sizes directly within their CI/CD pipeline. It monitors all types of artifacts, including binaries, JavaScript bundles, images, CSS files, and more, by comparing changes in pull requests with the [_default branch_](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches#about-the-default-branch).
 
-This ensures that accidental increases in asset or binary sizes don’t hit production, helping you maintain the performance of your applications together with a good user experience.
+When artifact sizes increase, Gravity flags them, providing reviewers with a clear overview to assess whether the change is expected or needs further attention. This process streamlines code reviews, reduces the risk of human error, and helps maintain the quality and performance of your projects—whether you're building applications, libraries, or tools.
 
-### Why We Built It?
+## Why Use Gravity?
 
-Performance regressions sneak in when you least expect them. With teams shipping updates multiple times a day, keeping an eye on bundle size growth can feel impossible. But ignoring it leads to slow load times and a frustrating user experience.
+☑️ **Improve Review Quality**
 
-That’s why we built _Gravity_, a smooth way for product teams to stay on top of performance without tedious manual reviews.
+See exactly which files have changed in size. Gravity gives you a clear overview right where you need it—in your pull request.
 
-<!-- TODO: Find an external resource on what happens when you have very large bundle sizes in your websites -->
+☑️ **Maintain Performance**
 
-Here are some cases where you might want to use _Gravity_:
+Identify accidental size increases early on, and catch potential performance issues before they reach production.
 
-- Catch unminified HTML/CSS/JS files
-- Catch images not properly compressed
-- Prevent a new version of your library from being published that is too large
-- Avoid unexpected bloated bundles when installing an update of a dependency
-- Catch dead code you don't need to publish
+☑️ **Save Time**
 
-## How Does It Work?
+Avoid wasting time backtracking through commits. Gravity highlights size changes automatically, making code reviews faster and easier.
 
-You can setup _Gravity_ in minutes! It's as simple as:
+## How Does Gravity Work?
 
-1. Installing [_Gravity_'s GitHub App](https://github.com/apps/gravity-ci)
-2. Adding a few lines to your GitHub Action to run _Gravity_ on your pull requests.
+Gravity integrates directly into your CI/CD pipeline, combining a GitHub app, a CLI tool in your GitHub Action, and a robust server-side analysis process. Once set up, Gravity automatically triggers an analysis every time a pull request is opened or modified. Here's a closer look at how it works:
 
-Every time you open a pull request, _Gravity_ uploads the bundle to a remote server and analyzes it.
+### 1. Artifact Upload
 
-Once the analysis is complete in the remote server, Gravity will create a [status check](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/collaborating-on-repositories-with-code-quality-features/about-status-checks) in you pull request. Depending on the analysis result, Gravity will report if the bundle size increased or not.
+When there are changes in a pull request, Gravity's CLI tool collects the build artifacts and uploads them to [S3](https://aws.amazon.com/s3/), and calls our server to schedule an analysis, adding you to a queue ([Redis](https://redis.io/)).
 
-### The _bundle size_ did **not** increase 📉
+### 2. Server-Side Analysis
 
-In case the bundle size did **not increase**, the status of this check will be **success (Approved automatically) ✅**, so there is no extra action to be taken.
+When it’s your turn in the queue, the analysis starts, comparing the artifact sizes in the pull request with those in the [_default branch_](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches#about-the-default-branch). Gravity does **not** inspect the content of the files, focusing purely on size changes to maintain data privacy and security.
 
-![Gravity Status Check is approved automatically](/assets/images/posts/2025-03-19-gravity/automatically-approved.png)
+### 3. Real-Time Feedback in GitHub
 
-### The _bundle size_ increased 📈
+Once the analysis is finished, Gravity updates the [_GitHub status check_](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/collaborating-on-repositories-with-code-quality-features/about-status-checks) directly within the pull request.
 
-In case the bundle size **increased**, the status of this check will be **failure (Needs approval) ❌**.
+**3.1.** If the artifact size has not increased, the status check is automatically approved, and the pull request can be merged without additional steps.
 
-![Gravity Status Check needs approval](/assets/images/posts/2025-03-19-gravity/needs-approval.png)
+![Screenshot of Gravity Check in GitHub: Automatically approved](/assets/images/posts/2025-03-19-gravity/automatically-approved.png)
 
-In this case, Gravity expects the team to decide if the reported increment is expected or not. If it's not expected, the author of the pull request has to address the issue. If the increment of bytes is expected, Gravity expects a reviewer to access the Gravity Dashboard and approve the bundle increase.
+**3.2.** If Gravity detects a size increase, the status check will fail. Reviewers are prompted to access the Gravity Dashboard, where they can see a detailed breakdown of which files increased in size and by how much.
 
-By accessing the Gravity Dashboard, the reviewer can see, in a quick eye-scan, which files have increased in size, and how much.
+![Screenshot of Gravity Check in GitHub: It needs approval](/assets/images/posts/2025-03-19-gravity/needs-approval.png)
 
 ![Approval page](/assets/images/posts/2025-03-19-gravity/approval-page.mp4#video)
 
-Once this is done, the Gravity PR Check will become **approved** and can be merged.
+If the reviewer deems the size increase acceptable, they can approve the change directly in the Gravity Dashboard. This approval updates the status check in GitHub, allowing the pull request to proceed to merge.
 
-![Gravity check approved](/assets/images/posts/2025-03-19-gravity/approved.png)
+![Screenshot of Gravity Check in GitHub: Approved](/assets/images/posts/2025-03-19-gravity/approved.png)
 
-### Limitations
+<p style="color:red">[INSERT VIDEO HERE]<p>
 
-- For now we only support [GitHub Actions](https://github.com/features/actions), but we plan to add support for other CI/CD tools in the future.
-- Bundle size limit of 5GB.
-- We don't support private repositories yet.
-- We don't support self-hosted server for now.
+## See Gravity in Action
 
-## Free for Open Source:
+Here are 3 Development Challenges Solved by Gravity:
 
-We are strong believers [companies should invest in Open Source](https://mainmatter.com/blog/2019/11/11/why-companies-invest-in-oss/).
+### 1. Prevent Oversized Asset Uploads
 
-_Gravity_ is not an exception: It is **free for open-source** repositories!
+Whether it’s an image, video, or a PDF, uploading large assets without realizing the impact can lead to unnecessary slowdowns. Gravity catches size increases directly in the pull request, giving you the opportunity to optimize before they reach production.
 
-## Try Gravity Today
+<p style="color:red">[INSERT SCREENSHOTS OR OTHER DEMONSTRATION OF GRAVITY PR RUNNING IN THIS SCENARIO]<p>
 
-Ready to put your bundle on diet? Get started with [Gravity](https://gravity.ci/) today. It’s **free** for open-source projects!
+### 2. Avoid Dependency Bloat
+
+Adding a new dependency can seem like a quick win, but it might also lead to a significant increase in your build size. Gravity flags this increase early, allowing you to assess whether a lighter alternative might be a better fit for your specific use case.
+
+<p style="color:red">[INSERT SCREENSHOTS OR OTHER DEMONSTRATION OF GRAVITY PR RUNNING IN THIS SCENARIO, I will use moment.js and data-fn as example]<p>
+
+### 3. Manage Binary Sizes Across Projects
+
+In any programming language, a small change in build configuration or an overlooked setting can lead to unexpectedly large binaries. Gravity highlights these size increases, prompting a review to ensure that your build remains as lean as possible.
+
+<p style="color:red">[INSERT SCREENSHOTS OR OTHER DEMONSTRATION OF GRAVITY PR RUNNING IN THIS SCENARIO, I will use a dummy Rust project and adding/removing the `strip` flag from Cargo.toml]<p>
