use capital letter on first word in titles
Co-authored-by: Kevin Bongart <154600+KevinBongart@users.noreply.github.com>

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -22,15 +22,15 @@ When artifact sizes increase, Gravity flags them, providing reviewers with a cle
 
 ## Why Use Gravity?
 
-☑️ **Improve Review Quality**
+☑️ **Improve review quality**
 
 See exactly which files have changed in size. Gravity gives you a clear overview right where you need it—in your pull request.
 
-☑️ **Maintain Performance**
+☑️ **Maintain performance**
 
 Identify accidental size increases early on, and catch potential performance issues before they reach production.
 
-☑️ **Save Time**
+☑️ **Save time**
 
 Avoid wasting time backtracking through commits. Gravity highlights size changes automatically, making code reviews faster and easier.
 
