stop talking about the default branch in 'What is Gravity' section
Co-authored-by: Kevin Bongart <154600+KevinBongart@users.noreply.github.com>

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -16,7 +16,7 @@ At [Mainmatter](https://mainmatter.com), we've seen firsthand how even small cha
 
 ## What is Gravity?
 
-Gravity is a tool that helps developers manage build artifact sizes directly within their CI/CD pipeline. It monitors all types of artifacts, including binaries, JavaScript bundles, images, CSS files, and more, by comparing changes in pull requests with the [_default branch_](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-branches#about-the-default-branch).
+Gravity is a tool that helps developers manage build artifact sizes directly within their CI/CD pipeline. It monitors all types of artifacts, including binaries, JavaScript bundles, images, CSS files, and more, by comparing changes in pull requests.
 
 When artifact sizes increase, Gravity flags them, providing reviewers with a clear overview to assess whether the change is expected or needs further attention. This process streamlines code reviews, reduces the risk of human error, and helps maintain the quality and performance of your projects—whether you're building applications, libraries, or tools.
 
