improve wording for 'How does Gravity Work' section
Co-authored-by: Kevin Bongart <154600+KevinBongart@users.noreply.github.com>

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -36,7 +36,7 @@ Avoid wasting time backtracking through commits. Gravity highlights size changes
 
 ## How Does Gravity Work?
 
-Gravity integrates directly into your CI/CD pipeline, combining a GitHub app, a CLI tool in your GitHub Action, and a robust server-side analysis process. Once set up, Gravity automatically triggers an analysis every time a pull request is opened or modified. Here's a closer look at how it works:
+Gravity integrates directly into your CI/CD pipeline by combining a GitHub app, a CLI tool in your GitHub Actions, and a robust server-side analysis process. Once set up, Gravity automatically triggers an analysis every time a pull request is opened or modified. Here's a closer look at how it works:
 
 ### 1. Artifact Upload
 
