--- a/src/twios/2025-03-09.md
+++ b/src/twios/2025-03-09.md
@@ -1,3 +1,21 @@
+## Rust
+
+- [mainmatter/reStations] [#68](https://github.com/mainmatter/reStations/pull/68) use From/Into instead of conversion function for responses ([@marcoow])
+- [mainmatter/reStations] [#67](https://github.com/mainmatter/reStations/pull/67) Remove unused data and `StationRecord` attributes ([@marcoow])
+- [mainmatter/reStations] [#62](https://github.com/mainmatter/reStations/pull/62) Switch to sqlx ([@marcoow])
+- [mainmatter/reStations] [#60](https://github.com/mainmatter/reStations/pull/60) remove unused dependencies ([@marcoow])
+- [mainmatter/reStations] [#57](https://github.com/mainmatter/reStations/pull/57) Improve docker image ([@marcoow])
+- [mainmatter/reStations] [#53](https://github.com/mainmatter/reStations/pull/53) remove `/stations` endpoint ([@marcoow])
+- [mainmatter/reStations] [#51](https://github.com/mainmatter/reStations/pull/51) Cleanup ([@marcoow])
+- [mainmatter/reStations] [#50](https://github.com/mainmatter/reStations/pull/50) Add README ([@marcoow])
+- [mainmatter/reStations] [#49](https://github.com/mainmatter/reStations/pull/49) Add support for searching places ([@marcoow])
+- [mainmatter/reStations] [#48](https://github.com/mainmatter/reStations/pull/48) add MIT and Apache licenses ([@marcoow])
+- [mainmatter/reStations] [#47](https://github.com/mainmatter/reStations/pull/47) Simplify data loading ([@marcoow])
+- [mainmatter/reStations] [#52](https://github.com/mainmatter/reStations/pull/52) Publish docker image ([@oscard0m])
+- [mainmatter/reStations] [#45](https://github.com/mainmatter/reStations/pull/45) fix: libsqlite3-sys requires toolchain version >=1.82 ([@BobrImperator])
+- [mainmatter/reStations] [#63](https://github.com/mainmatter/reStations/pull/63) Add curl examples to README ([@oliverbarnes])
+- [mainmatter/reStations] [#56](https://github.com/mainmatter/reStations/pull/56) Add code of conduct ([@oliverbarnes])
+
 ## Svelte
 
 - [mainmatter/sheepdog] [#285](https://github.com/mainmatter/sheepdog/pull/285) docs: update starlight components to use `Astro.locals.starlightRoute` ([@paoloricciuti])
@@ -35,6 +53,9 @@
 - [bgantzler/ember-mirage] [#56](https://github.com/bgantzler/ember-mirage/pull/56) Add optional peer dependency on ember-qunit ([@nickschot])
 - [bgantzler/ember-mirage] [#55](https://github.com/bgantzler/ember-mirage/pull/55) Widen @ember/test-helpers range to allow v3, v4 and v5 as well ([@nickschot])
 - [bgantzler/ember-mirage] [#54](https://github.com/bgantzler/ember-mirage/pull/54) Fix Mirage logging Qunit integration ([@nickschot])
+- [ember-cli/capture-exit] [#108](https://github.com/ember-cli/capture-exit/pull/108) fix licence ([@mansona])
+- [ember-learn/ember-help-wanted] [#267](https://github.com/ember-learn/ember-help-wanted/pull/267) add lint-to-the-future dashboard ([@mansona])
+- [ember-learn/ember-help-wanted] [#266](https://github.com/ember-learn/ember-help-wanted/pull/266) convert to pnpm ([@mansona])
 - [mainmatter/ember-intl-analyzer] [#740](https://github.com/mainmatter/ember-intl-analyzer/pull/740) move tests into a test folder ([@mansona])
 - [mainmatter/ember-intl-analyzer] [#735](https://github.com/mainmatter/ember-intl-analyzer/pull/735) convert to vitest ([@mansona])
 - [mainmatter/ember-vite-codemod] [#31](https://github.com/mainmatter/ember-vite-codemod/pull/31) start testing vite dev mode with testem ([@mansona])
@@ -42,27 +63,6 @@
 - [mainmatter/ember-vite-codemod] [#33](https://github.com/mainmatter/ember-vite-codemod/pull/33) Remove devDep portfinder ([@BlueCutOfficial])
 - [mainmatter/ember-vite-codemod] [#27](https://github.com/mainmatter/ember-vite-codemod/pull/27) Support apps building with @embroider/webpack ([@BlueCutOfficial])
 - [mainmatter/ember-vite-codemod] [#26](https://github.com/mainmatter/ember-vite-codemod/pull/26) Add ember-composable-helpers and ember-cli-mirage to unsupported deps ([@BlueCutOfficial])
-
-## Unknown
-
-- [ember-cli/capture-exit] [#108](https://github.com/ember-cli/capture-exit/pull/108) fix licence ([@mansona])
-- [ember-learn/ember-help-wanted] [#267](https://github.com/ember-learn/ember-help-wanted/pull/267) add lint-to-the-future dashboard ([@mansona])
-- [ember-learn/ember-help-wanted] [#266](https://github.com/ember-learn/ember-help-wanted/pull/266) convert to pnpm ([@mansona])
-- [mainmatter/reStations] [#68](https://github.com/mainmatter/reStations/pull/68) use From/Into instead of conversion function for responses ([@marcoow])
-- [mainmatter/reStations] [#67](https://github.com/mainmatter/reStations/pull/67) Remove unused data and `StationRecord` attributes ([@marcoow])
-- [mainmatter/reStations] [#62](https://github.com/mainmatter/reStations/pull/62) Switch to sqlx ([@marcoow])
-- [mainmatter/reStations] [#60](https://github.com/mainmatter/reStations/pull/60) remove unused dependencies ([@marcoow])
-- [mainmatter/reStations] [#57](https://github.com/mainmatter/reStations/pull/57) Improve docker image ([@marcoow])
-- [mainmatter/reStations] [#53](https://github.com/mainmatter/reStations/pull/53) remove `/stations` endpoint ([@marcoow])
-- [mainmatter/reStations] [#51](https://github.com/mainmatter/reStations/pull/51) Cleanup ([@marcoow])
-- [mainmatter/reStations] [#50](https://github.com/mainmatter/reStations/pull/50) Add README ([@marcoow])
-- [mainmatter/reStations] [#49](https://github.com/mainmatter/reStations/pull/49) Add support for searching places ([@marcoow])
-- [mainmatter/reStations] [#48](https://github.com/mainmatter/reStations/pull/48) add MIT and Apache licenses ([@marcoow])
-- [mainmatter/reStations] [#47](https://github.com/mainmatter/reStations/pull/47) Simplify data loading ([@marcoow])
-- [mainmatter/reStations] [#52](https://github.com/mainmatter/reStations/pull/52) Publish docker image ([@oscard0m])
-- [mainmatter/reStations] [#45](https://github.com/mainmatter/reStations/pull/45) fix: libsqlite3-sys requires toolchain version >=1.82 ([@BobrImperator])
-- [mainmatter/reStations] [#63](https://github.com/mainmatter/reStations/pull/63) Add curl examples to README ([@oliverbarnes])
-- [mainmatter/reStations] [#56](https://github.com/mainmatter/reStations/pull/56) Add code of conduct ([@oliverbarnes])
 - [nickschot/ember-vite] [#2](https://github.com/nickschot/ember-vite/pull/2) Download old artifacts ([@nickschot])
 - [nickschot/ember-vite] [#1](https://github.com/nickschot/ember-vite/pull/1) deploy lttf dashboard as artifact ([@nickschot])
 
