--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -5,7 +5,7 @@ tags: [gravity, ci, bundlesize, performance]
 bio: "Oscar Dominguez, Software Engineer"
 description: "Gravity monitors build artifact sizes to prevent accidental increases – right in your CI pipeline."
 og:
-  image: /assets/images/posts/2025-03-19-gravity/og-image.png
+  image: /assets/images/posts/2025-03-19-gravity/og-image.jpg
 image: "/assets/images/posts/2025-03-19-gravity/man-falling-darker-gray-logo.webp"
 imageAlt: "Gravity logo and backgound."
 ---
