do not use capital letter words in 'See Gravity in Action'

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -68,7 +68,7 @@ If the reviewer deems the size increase acceptable, they can approve the change 
 
 ## See Gravity in Action
 
-Here are 3 Development Challenges Solved by Gravity:
+Here are 3 development challenges solved by Gravity:
 
 ### 1. Prevent Oversized Asset Uploads
 
