apply feedback copywrite for opening paragraph

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -10,9 +10,11 @@ image: "/assets/images/posts/2025-03-19-gravity/man-falling-darker-gray-logo.web
 imageAlt: "Gravity logo and backgound."
 ---
 
-Build artifact sizes might not be the first thing you think about during code reviews, but keeping them in check can make a big difference. A minor update can easily lead to an unexpected size increase, and if it goes unnoticed, it could cause issues down the line.
+Build artifact sizes might not be the first thing you think about during code reviews, but keeping them in check can make a big difference.
 
-At [Mainmatter](https://mainmatter.com), we've seen firsthand how even small changes can lead to surprising performance regressions. That's why we built [Gravity](https://gravity.ci), a tool that helps developers manage build artifact sizes directly within their CI/CD pipeline. Today, we're excited to share it with the world.
+It's easy to add a JS dependency for a tiny feature that adds megabytes to the JS bundle without noticing or adding a huge _16MB_ _8000x8000_ pixel JPEG to a website or even adding a dependency to a Rust crate that results in a huge increase of the released binary. Any minor update can easily lead to an unexpected size increase, and if it goes unnoticed, it could cause issues down the line.
+
+At [Mainmatter](https://mainmatter.com), we've seen firsthand how even small changes can **unintentionally** lead to surprising performance regressions. That's why we built [Gravity](https://gravity.ci), a tool that helps developers easily **visualize** and **review** build artifact sizes directly within their CI/CD pipeline. Today, we're excited to share it with the world.
 
 ## What is Gravity?
 
