replace 'See Gravity in Action' with 'How we built Gravity'

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -68,24 +68,41 @@ If the reviewer deems the size increase acceptable, they can approve the change 
 
 <p style="color:red">[INSERT VIDEO HERE]<p>
 
-## See Gravity in Action
+## How we built Gravity?
 
-Here are 3 development challenges solved by Gravity:
+Gravity is a monorepo with multiple packages which end up configuring all the Gravity System. The main pieces are:
 
-### 1. Prevent Oversized Asset Uploads
+- Gravity CLI
+- Gravity server
+- Gravity pipeline
+- Gravity dashboard
 
-Whether it’s an image, video, or a PDF, uploading large assets without realizing the impact can lead to unnecessary slowdowns. Gravity catches size increases directly in the pull request, giving you the opportunity to optimize before they reach production.
+### Gravity CLI
 
-<p style="color:red">[INSERT SCREENSHOTS OR OTHER DEMONSTRATION OF GRAVITY PR RUNNING IN THIS SCENARIO]<p>
+_Gravity CLI_ is the command line tool you install in your GitHub Action. This piece is responsible of:
 
-### 2. Avoid Dependency Bloat
+- Upload the artifact to _AWS S3_
+- Send a request to the _Gravity server_ to store the corresponding build to the Data Base and schedule an analysis.
 
-Adding a new dependency can seem like a quick win, but it might also lead to a significant increase in your build size. Gravity flags this increase early, allowing you to assess whether a lighter alternative might be a better fit for your specific use case.
+It is built with _TypeScript_. We opted to use [meow](https://github.com/sindresorhus/meow) as our CLI helper.
 
-<p style="color:red">[INSERT SCREENSHOTS OR OTHER DEMONSTRATION OF GRAVITY PR RUNNING IN THIS SCENARIO, I will use moment.js and data-fn as example]<p>
+### Gravity server
 
-### 3. Manage Binary Sizes Across Projects
+_Gravity server_ is a _Express.js_ application written in _TypeScript_. The main functionalities it has are:
 
-In any programming language, a small change in build configuration or an overlooked setting can lead to unexpectedly large binaries. Gravity highlights these size increases, prompting a review to ensure that your build remains as lean as possible.
+- To provide single-use URLs to upload files to Gravity's _AWS S3_ bucket.
+- Manage the creation of a _build_ and store it in Gravity's DB (_PostgreSQL_)
+- Connect with Gravity Worker to schedule an analysis
+- Interact with GitHub API to update the status check to _pending_
 
-<p style="color:red">[INSERT SCREENSHOTS OR OTHER DEMONSTRATION OF GRAVITY PR RUNNING IN THIS SCENARIO, I will use a dummy Rust project and adding/removing the `strip` flag from Cargo.toml]<p>
+The choice to interact with Gravity's Data Base (_PostgreSQL_) is _TypeORM_. To interact with GitHub API, we use Octokit (where [I'm a regular contributor](https://github.com/orgs/octokit/people?query=oscard0m)) to interact with GitHub API.
+
+### Gravity pipeline
+
+_Gravity pipeline_ is the project in charge of managing the different artifact analysis requested by different PR's. In order to scale, we use a queue system to support peaks of traffic in _Gravity System_. To accomplish this we use Redis and we manage it with [`BullMQ`](https://docs.bullmq.io/).
+
+The key piece of the project? **Gravity Analyzer**, a piece written in _Rust_ to get the best performance. We initially had all the logic to download the artifacts from _S3_ and compare sizes file per file in _JavaScript_ but, at certain scale, in projects where there are hundreds of files to compare, it become a need to optimize this process. The switch to Rust made the analysis much faster, and we used [napi-rs](https://napi.rs/) to bridge the gap between _Rust_ and _TypeScript_.
+
+### Gravity dashboard
+
+_Gravity dashboard_ is the web app, built with [Remix](https://remix.run/). It's where you log in, see your projects, compare pull request results and manage approvals. The dashboard interacts with Gravity's database and GitHub API, giving you the possibility to approve PR checks with just a click.
