--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -20,6 +20,11 @@ At [Mainmatter](https://mainmatter.com), we've seen firsthand how even small cha
 
 Gravity is a tool that helps developers manage build artifact sizes directly within their CI/CD pipeline. It monitors all types of artifacts, including binaries, JavaScript bundles, images, CSS files, and more, by comparing changes in pull requests.
 
+Inspired by visual regression testing tools like [Percy](https://percy.io/) and [Chromatic](https://www.chromatic.com/), Gravity catches _undesired artifact size changes_ (instead of undesired _visual changes_) by:
+
+1. Establishing a workflow where the developer gets visibility of the implications of their changes in terms of artifact size
+2. Enforcing to review these size changes
+
 When artifact sizes increase, Gravity flags them, providing reviewers with a clear overview to assess whether the change is expected or needs further attention. This process streamlines code reviews, reduces the risk of human error, and helps maintain the quality and performance of your projects—whether you're building applications, libraries, or tools.
 
 ## Why Use Gravity?
