--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -51,7 +51,7 @@ When there are changes in a pull request, Gravity's CLI tool collects the build 
 
 ### 2. Server-Side Analysis
 
-When it’s your turn in the queue, the analysis starts, comparing the artifact sizes associated to the last commit of your pull request's _head branch_ with those in _base branch_. Gravity does **not** inspect the content of the files, focusing purely on size changes to maintain data privacy and security.
+When the upload is ready, the analysis starts, comparing the artifact sizes associated to the last commit of your pull request's _head branch_ with those in _base branch_. Gravity does **not** inspect the content of the files, focusing purely on size changes to maintain data privacy and security.
 
 ### 3. Real-Time Feedback in GitHub
 
