add engineering examples to 'Improve review quality' section

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -31,7 +31,7 @@ When artifact sizes increase, Gravity flags them, providing reviewers with a cle
 
 ☑️ **Improve review quality**
 
-See exactly which files have changed in size. Gravity gives you a clear overview right where you need it—in your pull request.
+Someone added an image and forgot to compress it? A new dependency but the library is bloated? Some CSS isn't properly minimized? See exactly which files have changed in size in your artifact. Gravity gives you a clear overview right where you need it—in your pull request.
 
 ☑️ **Maintain performance**
 
