--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -47,7 +47,7 @@ Gravity integrates directly into your CI/CD pipeline by combining a GitHub app, 
 
 ### 1. Artifact Upload
 
-When there are changes in a pull request, Gravity's CLI tool collects the build artifacts and uploads them to [S3](https://aws.amazon.com/s3/), and calls Gravity's server to schedule an analysis, adding you to a queue ([Redis](https://redis.io/)).
+Every time CI runs, Gravity's CLI tool collects the build artifacts and uploads them to [S3](https://aws.amazon.com/s3/), and calls Gravity's server to schedule an analysis, adding you to a queue ([Redis](https://redis.io/)).
 
 ### 2. Server-Side Analysis
 
