underline Gravity CLI needs to get the necessary build and optimization steps to generate the definitive artifact to measure

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -49,6 +49,8 @@ Gravity integrates directly into your CI/CD pipeline by combining a GitHub app, 
 
 Every time CI runs, Gravity's CLI tool collects the build artifacts and uploads them to [S3](https://aws.amazon.com/s3/), and calls Gravity's server to schedule an analysis, adding you to a queue ([Redis](https://redis.io/)).
 
+It is expected your GitHub Action to run all the build and optimization steps to generate the definitive artifact you want to measure **before** the Gravity CLI runs. If the artifact is not available, Gravity CLI can't upload anything.
+
 ### 2. Server-Side Analysis
 
 When the upload is ready, the analysis starts, comparing the artifact sizes associated to the last commit of your pull request's _head branch_ with those in _base branch_. Gravity does **not** inspect the content of the files, focusing purely on size changes to maintain data privacy and security.
