--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -45,6 +45,8 @@ Avoid wasting time backtracking through commits. Gravity highlights size changes
 
 Gravity integrates directly into your CI/CD pipeline by combining a GitHub app, a CLI tool in your GitHub Actions, and a robust server-side analysis process. Once set up, Gravity automatically triggers an analysis every time a pull request is opened or modified. Here's a closer look at how it works:
 
+![Gravity Diagram](/assets/images/posts/2025-03-19-gravity/gravity-diagram.svg)
+
 ### 1. Artifact Upload
 
 Every time CI runs, Gravity's CLI tool collects the build artifacts and uploads them to [S3](https://aws.amazon.com/s3/), and calls Gravity's server to schedule an analysis, adding you to a queue ([Redis](https://redis.io/)).
