add 3 events to calendar
- Emberjs Europe Meetup
- Karlsruher Entwicklertag 2025
- JSNation

--- a/src/calendar/2025-05-20-imex.md
+++ b/src/calendar/2025-05-20-imex.md
@@ -4,7 +4,7 @@ image: "/assets/images/calendar/2025-05-20-imex/imex.png"
 location: "Frankfurt"
 url: https://imex-frankfurt.com/newfront
 kind: conference
-color: purple
+color: aqua
 hero:
   image: "/assets/images/calendar/2025-05-20-imex/Frankfurt.png"
   imageAlt: "View of the city of Frankfurt"
