--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -12,7 +12,7 @@ imageAlt: "Gravity logo and backgound."
 
 Build artifact sizes might not be the first thing you think about during code reviews, but keeping them in check can make a big difference.
 
-It's easy to add a JS dependency for a tiny feature that adds megabytes to the JS bundle without noticing or adding a huge _16MB_ _8000x8000_ pixel JPEG to a website or even adding a dependency to a Rust crate that results in a huge increase of the released binary. Any minor update can easily lead to an unexpected size increase, and if it goes unnoticed, it could cause issues down the line.
+It’s easy to bloat your build without realizing it. Maybe you just needed a simple date formatter and pulled in `moment.js`, unknowingly adding hundreds of kilobytes of JavaScript. Or you accidentally shipped a 16MB 8000×8000 pixel JPEG. Or maybe you added `serde_json` to a Rust project just to parse a tiny config file, only to see your binary size jump by megabytes. These small choices add up, and if they go unnoticed, they can hurt performance, user experience, and maintainability.
 
 At [Mainmatter](https://mainmatter.com), we've seen firsthand how even small changes can **unintentionally** lead to surprising performance regressions. That's why we built [Gravity](https://gravity.ci), a tool that helps developers easily **visualize** and **review** build artifact sizes directly within their CI/CD pipeline. Today, we're excited to share it with the world.
 
