add Octokit reference and Oscar's contributor status back in
…which was removed accidentally previously

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -64,6 +64,8 @@ If the uploaded artifacts belong to a GitHub pull request, the Gravity server co
 
 ![Screenshot of Gravity Check in GitHub: Automatically approved](/assets/images/posts/2025-03-19-gravity/automatically-approved.png)
 
+To interact with GitHub API, we use Octokit (where [I'm a regular contributor](https://github.com/orgs/octokit/people?query=oscard0m) 🙌).
+
 If new artifacts are detected or existing ones have grown in size, a failing status check is added:
 
 ![Screenshot of Gravity Check in GitHub: It needs approval](/assets/images/posts/2025-03-19-gravity/needs-approval.png)
