--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -3,7 +3,7 @@ title: "Keeping Artifact Sizes Under Control"
 authorHandle: oscard0m_
 tags: [gravity, testing, process, mainmatter]
 bio: "Oscar Dominguez, Software Engineer"
-description: "Staying on top of asset sizes can be challenging. Gravity is a developer tool taht helps teams catch regressions early."
+description: "Staying on top of asset sizes can be challenging. Gravity is a developer tool that helps teams catch regressions early."
 og:
   image: /assets/images/posts/2025-03-19-gravity/og-image.jpg
 image: "/assets/images/posts/2025-03-19-gravity/man-falling-darker-gray-logo.webp"
@@ -34,7 +34,7 @@ Gravity consists of a set of core components:
 
 - the CLI tool [`@gravityci/cli`](https://www.npmjs.com/package/@gravityci/cli), which runs in your CI environment
 - The Gravity server, which processes uploaded artifacts, calculates differences, and hosts the UI for developers to review and approve changes.
-- the GitHub[^1], which enables Gravity to interact with the repository, such as adding checks to pull requests.
+- the GitHub app[^1], which enables Gravity to interact with the repository, such as adding checks to pull requests.
 
 The execution flow is roughly as follows:
 
