add UTM params to Gravity links

--- a/src/posts/2025-03-19-gravity.md
+++ b/src/posts/2025-03-19-gravity.md
@@ -13,7 +13,7 @@ tagline: <p>Staying on top of asset sizes can be challenging, but keeping them i
 
 It's surprisingly easy to inflate your build artifacts without noticing. Perhaps you added a simple date formatter and included `moment.js`, inadvertently adding hundreds of kilobytes to your JavaScript bundle. Or you shipped a 16MB JPEG to your website where a small thumbnail weighing in at a few KB would have be sufficient. Maybe a new dependency in your Rust project increased your CLI tool's size by several megabytes for very little added value. These small changes accumulate, impacting performance, user experience, and leading to unnecessary computation or data transfer and storage costs.
 
-We've seen this over and over across the [numerous projects](/work/) we worked on over the years. Innocuous code changes can significantly increase artifact sizes, often going unnoticed because there's no way to see these implications during a pull request review. That's why we created [Gravity](https://gravity.ci), a tool that visualizes a PR's impact on artifact sizes within the CI pipeline. It supports all kinds of artifacts, from JS bundles and images to binaries and Docker images–anything where your care about the size of your artifacts."
+We've seen this over and over across the [numerous projects](/work/) we worked on over the years. Innocuous code changes can significantly increase artifact sizes, often going unnoticed because there's no way to see these implications during a pull request review. That's why we created [Gravity](https://gravity.ci/?utm_source=mainmatter.com), a tool that visualizes a PR's impact on artifact sizes within the CI pipeline. It supports all kinds of artifacts, from JS bundles and images to binaries and Docker images–anything where your care about the size of your artifacts."
 
 ## How does Gravity work?
 
