--- a/src/twios/2025-03-16.md
+++ b/src/twios/2025-03-16.md
@@ -13,6 +13,10 @@
 - [mainmatter/reStations] [#70](https://github.com/mainmatter/reStations/pull/70) Distribute types between controller and db modules ([@oliverbarnes])
 - [mainmatter/reStations] [#63](https://github.com/mainmatter/reStations/pull/63) Add curl examples to README ([@oliverbarnes])
 
+## Svelte
+
+- [paoloricciuti/bsky-svelte-feed] [#2](https://github.com/paoloricciuti/bsky-svelte-feed/pull/2) fix: still include every post of mine ([@paoloricciuti])
+
 ## Embroider
 
 - [embroider-build/embroider] [#2380](https://github.com/embroider-build/embroider/pull/2380) mark template-codemod as a stable 1.0.0 release ([@mansona])
@@ -60,10 +64,6 @@
 - [nickschot/ember-mobile-menu] [#1129](https://github.com/nickschot/ember-mobile-menu/pull/1129) Docs smoke test & lint config fixes ([@nickschot])
 - [nickschot/ember-mobile-menu] [#1128](https://github.com/nickschot/ember-mobile-menu/pull/1128) Fix addon-docs deployment ([@nickschot])
 - [nickschot/ember-mobile-menu] [#1124](https://github.com/nickschot/ember-mobile-menu/pull/1124) Get rid of dependenciesMeta injected and use pnpm flags only when needed in CI ([@nickschot])
-
-## Unknown
-
-- [paoloricciuti/bsky-svelte-feed] [#2](https://github.com/paoloricciuti/bsky-svelte-feed/pull/2) fix: still include every post of mine ([@paoloricciuti])
 
 [@mansona]: https://github.com/mansona
 [@marcoow]: https://github.com/marcoow
