--- a/src/twios/2025-04-13.md
+++ b/src/twios/2025-04-13.md
@@ -1,3 +1,8 @@
+## Rust
+
+- [tensorzero/tensorzero] [#1732](https://github.com/tensorzero/tensorzero/pull/1732) Sync crate versions with release version ([@oliverbarnes])
+- [tensorzero/tensorzero] [#1731](https://github.com/tensorzero/tensorzero/pull/1731) End to end test for o3-mini ([@oliverbarnes])
+
 ## crates.io
 
 - [rust-lang/crates.io] [#10956](https://github.com/rust-lang/crates.io/pull/10956) Remove `ember-fetch` dependency ([@mansona])
@@ -22,6 +27,8 @@
 - [ember-a11y/ember-a11y-testing] [#601](https://github.com/ember-a11y/ember-a11y-testing/pull/601) convert render tests tests to gts ([@mansona])
 - [ember-a11y/ember-a11y-testing] [#598](https://github.com/ember-a11y/ember-a11y-testing/pull/598) [internal] set up release-plan ([@mansona])
 - [ember-a11y/ember-a11y-testing] [#597](https://github.com/ember-a11y/ember-a11y-testing/pull/597) [internal] move from yarn to pnpm ([@mansona])
+- [ember-cli/ember-addon-blueprint] [#28](https://github.com/ember-cli/ember-addon-blueprint/pull/28) Unskip build test - make sure test work out of the box ([@mansona])
+- [ember-cli/ember-addon-blueprint] [#26](https://github.com/ember-cli/ember-addon-blueprint/pull/26) Import tests from @embroider/addon-blueprint ([@mansona])
 - [ember-learn/deprecation-app] [#1401](https://github.com/ember-learn/deprecation-app/pull/1401) enforce the right type for since and until in frontmatter ([@mansona])
 - [ember-learn/ember-website] [#1140](https://github.com/ember-learn/ember-website/pull/1140) add the ability to link to a team on teams page ([@mansona])
 - [embroider-build/addon-blueprint] [#338](https://github.com/embroider-build/addon-blueprint/pull/338) add warning to readme ([@mansona])
@@ -29,14 +36,7 @@
 - [mainmatter/ember-test-selectors] [#1294](https://github.com/mainmatter/ember-test-selectors/pull/1294) Plugin for Vite ([@BlueCutOfficial])
 - [mainmatter/ember-test-selectors] [#1289](https://github.com/mainmatter/ember-test-selectors/pull/1289) Monorepo structure ([@BlueCutOfficial])
 - [mainmatter/ember-vite-codemod] [#80](https://github.com/mainmatter/ember-vite-codemod/pull/80) Import missing `@embroider/core/types/virtual` when using --ts ([@BlueCutOfficial])
-
-## Unknown
-
-- [ember-cli/ember-addon-blueprint] [#28](https://github.com/ember-cli/ember-addon-blueprint/pull/28) Unskip build test - make sure test work out of the box ([@mansona])
-- [ember-cli/ember-addon-blueprint] [#26](https://github.com/ember-cli/ember-addon-blueprint/pull/26) Import tests from @embroider/addon-blueprint ([@mansona])
 - [pichfl/smite] [#1](https://github.com/pichfl/smite/pull/1) convert to Ember ([@mansona])
-- [tensorzero/tensorzero] [#1732](https://github.com/tensorzero/tensorzero/pull/1732) Sync crate versions with release version ([@oliverbarnes])
-- [tensorzero/tensorzero] [#1731](https://github.com/tensorzero/tensorzero/pull/1731) End to end test for o3-mini ([@oliverbarnes])
 
 [@BlueCutOfficial]: https://github.com/BlueCutOfficial
 [@mansona]: https://github.com/mansona
