--- a/src/twios/2025-05-04.md
+++ b/src/twios/2025-05-04.md
@@ -2,6 +2,10 @@
 
 - [tensorzero/tensorzero] [#1819](https://github.com/tensorzero/tensorzero/pull/1819) Expose extra headers on inference ([@oliverbarnes])
 
+## Empress
+
+- [empress/field-guide-default-template] [#52](https://github.com/empress/field-guide-default-template/pull/52) convert to template tag with the @embroider/template-tag-codemod ([@mansona])
+
 ## JavaScript
 
 - [mainmatter/auto-reveal-theme-mainmatter] [#17](https://github.com/mainmatter/auto-reveal-theme-mainmatter/pull/17) Update theme to match our current design language ([@pichfl])
@@ -11,10 +15,6 @@
 
 - [ember-learn/ember-help-wanted] [#277](https://github.com/ember-learn/ember-help-wanted/pull/277) apply prettier to all our hbs files ([@mansona])
 - [ember-learn/ember-help-wanted] [#276](https://github.com/ember-learn/ember-help-wanted/pull/276) update to v6.3 with ember-cli-update ([@mansona])
-
-## Unknown
-
-- [empress/field-guide-default-template] [#52](https://github.com/empress/field-guide-default-template/pull/52) convert to template tag with the @embroider/template-tag-codemod ([@mansona])
 
 [@mansona]: https://github.com/mansona
 [@oliverbarnes]: https://github.com/oliverbarnes
