--- a/src/twios/2025-05-11.md
+++ b/src/twios/2025-05-11.md
@@ -1,4 +1,4 @@
-## Unknown
+## Svelte
 
 - [pngwn/MDsveX] [#728](https://github.com/pngwn/MDsveX/pull/728) fix: prevent race condition with `add_layouts` ([@paoloricciuti])
 
