Adding events to calendar
Delete ElixirConf

Add:
- PyCon Italia
- TechCamp Hamburg
- EmberFest

--- a/src/calendar/2025-10-09-eurorust.md
+++ b/src/calendar/2025-10-09-eurorust.md
@@ -4,7 +4,7 @@ image: "/assets/images/calendar/2025-10-09-eurorust/rust.png"
 location: "Paris & Online"
 url: https://eurorust.eu
 kind: conference
-color: purple
+color: aqua
 hero:
   image: "/assets/images/calendar/2025-10-09-eurorust/paris.jpg"
   imageAlt: "View of a Parisian street with the Eiffel tower in the background"
