--- a/src/calendar/2025-06-03-TechCamp.md
+++ b/src/calendar/2025-06-03-TechCamp.md
@@ -4,7 +4,7 @@ image: "/assets/images/calendar/2025-06-03-TechCamp/svelte.png"
 location: "Hamburg"
 url: https://techcamp.hamburg/programm-2025/
 kind: conference
-color: purple
+color: aqua
 hero:
   image: "/assets/images/calendar/2025-06-03-TechCamp/Hamburg.png"
   imageAlt: "A moody view of Hamburg’s Speicherstadt district, with the iconic Elbphilharmonie concert hall rising in the background."
