--- a/src/calendar/2025-05-28-PyCon2025.md
+++ b/src/calendar/2025-05-28-PyCon2025.md
@@ -10,4 +10,4 @@ hero:
   imageAlt: "Evening falls on the warm, historic porticoes of Bologna, Italy, lit by golden streetlamps and steeped in charm."
 ---
 
-Our Rust expert Luca Palmieri will lead the Rust–Python Interoperability workshop, a hands-on session showing how to boost Python app performance by rewriting only the slow parts in Rust. Learn to work with pyo3, navigate the GIL, and build native extensions.
+Our Rust expert Luca Palmieri will host a Rust–Python Interoperability workshop, showing how to boost the performance of Python apps by rewriting only the slow parts in Rust. Learn to work with pyo3, navigate the GIL, and build native extensions.
