--- a/src/twios/2025-05-18.md
+++ b/src/twios/2025-05-18.md
@@ -18,7 +18,7 @@
 
 - [mansona/lttf-dashboard] [#11](https://github.com/mansona/lttf-dashboard/pull/11) get previous results with git - support github enterprise private pages out of the box ([@mansona])
 
-## Unknown
+## Ember
 
 - [blogic/ember-ui] [#7](https://github.com/blogic/ember-ui/pull/7) update ember-formatjs to remove engine warning ([@mansona])
 - [blogic/ember-ui] [#6](https://github.com/blogic/ember-ui/pull/6) add lint-to-the-future dashboard ([@mansona])
