--- a/src/calendar/2025-09-02-rustconf25.md
+++ b/src/calendar/2025-09-02-rustconf25.md
@@ -10,4 +10,4 @@ hero:
   imageAlt: "The Seattle skyline with the Space Needle in the foreground and Mount Rainier visible in the background"
 ---
 
-Join us as we're heading to RustConf 2025, the original Rust programming language conference. Our Rust Expert, Luca Palmieri, will head there to lead another interesting session!
+Join our Luca Palmieri as he's heading to RustConf 2025 in Seattle! Luca will give the talk "Rewrite, optimize, repeat: our journey porting a triemap from C to Rust" about some of our recent work with Redis.
