--- a/src/twios/2025-07-06.md
+++ b/src/twios/2025-07-06.md
@@ -1,5 +1,10 @@
+## Rust
+
+- [LukeMathWalker/pavex] [#497](https://github.com/LukeMathWalker/pavex/pull/497) Sqlite session store ([@oliverbarnes])
+
 ## Svelte
 
+- [StephenGunn/svelte-component-to-image] [#3](https://github.com/StephenGunn/svelte-component-to-image/pull/3) feat: better DX for library usage ([@paoloricciuti])
 - [svecosystem/runed] [#279](https://github.com/svecosystem/runed/pull/279) fix: remove `#version` from persisted & don't recreate proxies ([@paoloricciuti])
 - [sveltejs/svelte] [#16309](https://github.com/sveltejs/svelte/pull/16309) fix: account for mounting when `select_option` in `attribute_effect` ([@paoloricciuti])
 
@@ -21,11 +26,6 @@
 - [ember-learn/ember-website] [#1152](https://github.com/ember-learn/ember-website/pull/1152) update the anchor for the ember initiative ([@mansona])
 - [ember-learn/ember-website] [#1151](https://github.com/ember-learn/ember-website/pull/1151) Update sponsors for the Ember Initiative ([@mansona])
 - [ember-learn/guides-source] [#2121](https://github.com/ember-learn/guides-source/pull/2121) Release v6.5.0 ([@mansona])
-
-## Unknown
-
-- [LukeMathWalker/pavex] [#497](https://github.com/LukeMathWalker/pavex/pull/497) Sqlite session store ([@oliverbarnes])
-- [StephenGunn/svelte-component-to-image] [#3](https://github.com/StephenGunn/svelte-component-to-image/pull/3) feat: better DX for library usage ([@paoloricciuti])
 
 [@BlueCutOfficial]: https://github.com/BlueCutOfficial
 [@mansona]: https://github.com/mansona
