Event calendar update
Adding 2 events:
- Ember Dublin
- Oxidize

--- a/src/calendar/2025-09-02-rustconf25.md
+++ b/src/calendar/2025-09-02-rustconf25.md
@@ -4,7 +4,7 @@ image: "/assets/images/calendar/2025-09-02-rustconf25/rust.png"
 location: "Seattle"
 url: https://rustconf.com/speakers/#sessions
 kind: conference
-color: purple
+color: aqua
 hero:
   image: "/assets/images/calendar/2025-09-02-rustconf25/seattle.png"
   imageAlt: "The Seattle skyline with the Space Needle in the foreground and Mount Rainier visible in the background"
