--- a/src/twios/2025-07-13.md
+++ b/src/twios/2025-07-13.md
@@ -1,5 +1,17 @@
 ## Svelte
 
+- [paoloricciuti/tmcp] [#13](https://github.com/paoloricciuti/tmcp/pull/13) chore: add readme to main package ([@paoloricciuti])
+- [paoloricciuti/tmcp] [#11](https://github.com/paoloricciuti/tmcp/pull/11) Revert "Version Packages" ([@paoloricciuti])
+- [paoloricciuti/tmcp] [#9](https://github.com/paoloricciuti/tmcp/pull/9) Revert "Version Packages" ([@paoloricciuti])
+- [paoloricciuti/tmcp] [#7](https://github.com/paoloricciuti/tmcp/pull/7) Revert "Version Packages" ([@paoloricciuti])
+- [paoloricciuti/tmcp] [#5](https://github.com/paoloricciuti/tmcp/pull/5) Revert "Version Packages" ([@paoloricciuti])
+- [paoloricciuti/tmcp] [#3](https://github.com/paoloricciuti/tmcp/pull/3) Revert "Version Packages" ([@paoloricciuti])
+- [paoloricciuti/tmcp] [#1](https://github.com/paoloricciuti/tmcp/pull/1) chore: update readme ([@paoloricciuti])
+- [paoloricciuti/uri-template-matcher] [#8](https://github.com/paoloricciuti/uri-template-matcher/pull/8) feat: add `UriTemplateExpander` api ([@paoloricciuti])
+- [paoloricciuti/uri-template-matcher] [#7](https://github.com/paoloricciuti/uri-template-matcher/pull/7) chore: add uri test suite ([@paoloricciuti])
+- [paoloricciuti/uri-template-matcher] [#5](https://github.com/paoloricciuti/uri-template-matcher/pull/5) fix: consequent variables and rest api with optional format ([@paoloricciuti])
+- [paoloricciuti/uri-template-matcher] [#3](https://github.com/paoloricciuti/uri-template-matcher/pull/3) chore: create LICENSE ([@paoloricciuti])
+- [paoloricciuti/uri-template-matcher] [#1](https://github.com/paoloricciuti/uri-template-matcher/pull/1) chore: update license ([@paoloricciuti])
 - [svecosystem/runed] [#279](https://github.com/svecosystem/runed/pull/279) fix: remove `#version` from persisted & don't recreate proxies ([@paoloricciuti])
 - [sveltejs/svelte] [#16309](https://github.com/sveltejs/svelte/pull/16309) fix: account for mounting when `select_option` in `attribute_effect` ([@paoloricciuti])
 - [sveltejs/svelte] [#16239](https://github.com/sveltejs/svelte/pull/16239) fix: use `state` instead of `source` in reactive classes ([@paoloricciuti])
@@ -16,25 +28,10 @@
 
 - [ember-learn/guides-source] [#2122](https://github.com/ember-learn/guides-source/pull/2122) fix a confusion in the release script about ember data ([@mansona])
 - [emberjs/ember-inspector] [#2668](https://github.com/emberjs/ember-inspector/pull/2668) Cleanup import ember ([@BlueCutOfficial])
-- [mainmatter/ember-promise-modals] [#982](https://github.com/mainmatter/ember-promise-modals/pull/982) Update to Glimmer components & fix CI setup ([@pichfl])
-
-## Unknown
-
 - [mainmatter/ember-multiframework] [#4](https://github.com/mainmatter/ember-multiframework/pull/4) Add basic component test ([@nickschot])
 - [mainmatter/ember-multiframework] [#3](https://github.com/mainmatter/ember-multiframework/pull/3) Upgrade vite-plugin-svelte to v6 (fixes bug with it parsing unrelated files by default) ([@nickschot])
 - [mainmatter/ember-multiframework] [#2](https://github.com/mainmatter/ember-multiframework/pull/2) remove version from pnpm action ([@mansona])
-- [paoloricciuti/tmcp] [#13](https://github.com/paoloricciuti/tmcp/pull/13) chore: add readme to main package ([@paoloricciuti])
-- [paoloricciuti/tmcp] [#11](https://github.com/paoloricciuti/tmcp/pull/11) Revert "Version Packages" ([@paoloricciuti])
-- [paoloricciuti/tmcp] [#9](https://github.com/paoloricciuti/tmcp/pull/9) Revert "Version Packages" ([@paoloricciuti])
-- [paoloricciuti/tmcp] [#7](https://github.com/paoloricciuti/tmcp/pull/7) Revert "Version Packages" ([@paoloricciuti])
-- [paoloricciuti/tmcp] [#5](https://github.com/paoloricciuti/tmcp/pull/5) Revert "Version Packages" ([@paoloricciuti])
-- [paoloricciuti/tmcp] [#3](https://github.com/paoloricciuti/tmcp/pull/3) Revert "Version Packages" ([@paoloricciuti])
-- [paoloricciuti/tmcp] [#1](https://github.com/paoloricciuti/tmcp/pull/1) chore: update readme ([@paoloricciuti])
-- [paoloricciuti/uri-template-matcher] [#8](https://github.com/paoloricciuti/uri-template-matcher/pull/8) feat: add `UriTemplateExpander` api ([@paoloricciuti])
-- [paoloricciuti/uri-template-matcher] [#7](https://github.com/paoloricciuti/uri-template-matcher/pull/7) chore: add uri test suite ([@paoloricciuti])
-- [paoloricciuti/uri-template-matcher] [#5](https://github.com/paoloricciuti/uri-template-matcher/pull/5) fix: consequent variables and rest api with optional format ([@paoloricciuti])
-- [paoloricciuti/uri-template-matcher] [#3](https://github.com/paoloricciuti/uri-template-matcher/pull/3) chore: create LICENSE ([@paoloricciuti])
-- [paoloricciuti/uri-template-matcher] [#1](https://github.com/paoloricciuti/uri-template-matcher/pull/1) chore: update license ([@paoloricciuti])
+- [mainmatter/ember-promise-modals] [#982](https://github.com/mainmatter/ember-promise-modals/pull/982) Update to Glimmer components to support Ember 6 ([@pichfl])
 
 [@BlueCutOfficial]: https://github.com/BlueCutOfficial
 [@mansona]: https://github.com/mansona
