--- a/src/twios/2025-08-10.md
+++ b/src/twios/2025-08-10.md
@@ -8,6 +8,11 @@
 - [embroider-build/embroider] [#2535](https://github.com/embroider-build/embroider/pull/2535) add vite 7 to scenario tester ([@mansona])
 - [embroider-build/embroider] [#2534](https://github.com/embroider-build/embroider/pull/2534) update pnpm to 10 ([@mansona])
 
+## JavaScript
+
+- [fabian-hiller/valibot] [#1270](https://github.com/fabian-hiller/valibot/pull/1270) fix: use the ts parser in website codemod playground ([@paoloricciuti])
+- [fabian-hiller/valibot] [#1262](https://github.com/fabian-hiller/valibot/pull/1262) fix: properly migrate `strict` and `passthrough` ([@paoloricciuti])
+
 ## Ember
 
 - [ember-cli/ember-cli] [#10756](https://github.com/ember-cli/ember-cli/pull/10756) Prepare Alpha Release ([@mansona])
@@ -17,18 +22,11 @@
 
 ## Unknown
 
-- [fabian-hiller/valibot] [#1270](https://github.com/fabian-hiller/valibot/pull/1270) fix: use the ts parser in website codemod playground ([@paoloricciuti])
-- [fabian-hiller/valibot] [#1262](https://github.com/fabian-hiller/valibot/pull/1262) fix: properly migrate `strict` and `passthrough` ([@paoloricciuti])
 - [mainmatter/build-start-rebuild-perf] [#8](https://github.com/mainmatter/build-start-rebuild-perf/pull/8) Improve README ([@pichfl])
 - [mainmatter/build-start-rebuild-perf] [#7](https://github.com/mainmatter/build-start-rebuild-perf/pull/7) Run tests in CI ([@pichfl])
 - [mainmatter/build-start-rebuild-perf] [#12](https://github.com/mainmatter/build-start-rebuild-perf/pull/12) fix pnpm workspace ([@mansona])
 - [mainmatter/build-start-rebuild-perf] [#6](https://github.com/mainmatter/build-start-rebuild-perf/pull/6) reset version in package.json ([@mansona])
 - [mainmatter/build-start-rebuild-perf] [#4](https://github.com/mainmatter/build-start-rebuild-perf/pull/4) start using release-plan ([@mansona])
-- [paoloricciuti/the-blog-of-alexandria] [#9](https://github.com/paoloricciuti/the-blog-of-alexandria/pull/9) Add created_at field to blogs and update sorting ([@paoloricciuti])
-- [paoloricciuti/the-blog-of-alexandria] [#7](https://github.com/paoloricciuti/the-blog-of-alexandria/pull/7) improve: enhance blog post generation prompt ([@paoloricciuti])
-- [paoloricciuti/the-blog-of-alexandria] [#5](https://github.com/paoloricciuti/the-blog-of-alexandria/pull/5) feat: make blog post titles bigger and bolder ([@paoloricciuti])
-- [paoloricciuti/the-blog-of-alexandria] [#3](https://github.com/paoloricciuti/the-blog-of-alexandria/pull/3) feat: implement paginated blog list on /blog page ([@paoloricciuti])
-- [paoloricciuti/the-blog-of-alexandria] [#1](https://github.com/paoloricciuti/the-blog-of-alexandria/pull/1) Add Claude Code GitHub Workflow ([@paoloricciuti])
 
 [@mansona]: https://github.com/mansona
 [@paoloricciuti]: https://github.com/paoloricciuti
@@ -38,7 +36,6 @@
 [embroider-build/embroider]: https://github.com/embroider-build/embroider
 [fabian-hiller/valibot]: https://github.com/fabian-hiller/valibot
 [mainmatter/build-start-rebuild-perf]: https://github.com/mainmatter/build-start-rebuild-perf
-[paoloricciuti/the-blog-of-alexandria]: https://github.com/paoloricciuti/the-blog-of-alexandria
 [paoloricciuti/tmcp]: https://github.com/paoloricciuti/tmcp
 [sveltejs/svelte]: https://github.com/sveltejs/svelte
 [yapplabs/ember-wormhole]: https://github.com/yapplabs/ember-wormhole
