Apply suggestion from @marcoow

--- a/src/calendar/2025-11-02-rustlab.md
+++ b/src/calendar/2025-11-02-rustlab.md
@@ -1,5 +1,5 @@
 ---
-title: "RUSTLAB"
+title: "RustLab"
 image: "/assets/images/calendar/2025-11-02-rustlab/rust.png"
 location: "Florence, Italy"
 url: https://rustlab.it/speakers/palmieri
